--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -19,7 +19,7 @@ jobs:
       env:
         SSH_DEPLOY_KEY: ${{ secrets.TOKEN }}
       with:
-        source-directory: test/charts/
+        source-directory: test2/charts/
         destination-github-username: 'LancelotMarti'
         destination-repository-name: 'sandbox'
         target-branch: main
